add edited the footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
     </main>
     <footer> 
-        <p>&copy; 2024 CSS Snippet Cheatsheet</p>
+        <p>&copy; Kittiya Goldberg ❤️ 2024 CSS Snippet Cheatsheet</p>
     </footer>
 </body>
 </html>
