--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h2> Box Transition Glow </h2>
             <pre><code>.code-card .card-header {<br>  border-radius: 8px;<br>  transition: all 0.5s ease-in-out;<br>}</code></pre>
         </div>
-        <div class="card"> 47004701
-            
+        <div class="card"> 
+
             <h2> Overlay Card with Title </h2>
             <pre><code>.card-header {<br>  position: relative;<br>  top: -10px;<br>  left: -10px;<br>}</code></pre>
         </div>
