fixed the syntax at the flexbox card , update the update the readme file, at the css update the Responsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Css Snippet Chrstsheet</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
     <main class="grid">
         <div class="card"> 
             <h2> Flexbox Row </h2>
-            <pre><code>.row {<br>} display: flex;  flex-direction: row;  </code></pre>
+            <pre><code>.row {<br> display: flex;<br>  flex-direction: row;<br>}  </code></pre>
         </div>
         <div class="card"> 
             <h2> Flexbox Column </h2>
@@ -37,14 +37,7 @@
             <h2> Overlay Card with Title </h2>
             <pre><code>.card-header {<br>  position: relative;<br>  top: -10px;<br>  left: -10px;<br>}</code></pre>
         </div>
-        <div class="card"> 
-            <h2> Flexbox Row </h2>
-            <pre><code>.row {<br>} display: flex;  flex-direction: row;  </code></pre>
-        </div>
-        <div class="card"> 
-            <h2> Flexbox Row </h2>
-            <pre><code>.row {<br>} display: flex;  flex-direction: row; </code></pre>
-        </div>
+        
         
     </main>
     <footer> 
